--- a/.github/workflows/enhanced-ci-cd.yml
+++ b/.github/workflows/enhanced-ci-cd.yml
@@ -33,6 +33,10 @@ jobs:
       
       - name: Run preflight cross-component install check
         run: ./.github/preflight/check_cross_component_installs.sh
+
+      - name: Validate test fixtures auditability
+        run: |
+          python ./.github/preflight/validate_test_fixtures.py
           
       - name: 🔍 Enhanced Security Scan
         id: security
