--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,11 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
-  "react-json-view-lite": "^2.4.2",
+    "react-json-view-lite": "^2.4.2",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.0",
@@ -53,7 +56,6 @@
     "url": "^0.11.0",
     "util": "^0.12.5"
   },
-  
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-app-rewired start",
     "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
@@ -85,11 +87,11 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "compression-webpack-plugin": "^10.0.0",
     "jsdom": "^24.0.0",
-  "vitest": "^3.2.4",
-  "vite": "^5.1.0",
-  "compression-webpack-plugin": "^10.0.0",
-  "terser-webpack-plugin": "^5.3.6"
+    "terser-webpack-plugin": "^5.3.6",
+    "vite": "^5.1.0",
+    "vitest": "^3.2.4"
   },
   "proxy": "http://backend:8000"
 }
